# todoister

./: .editorconfig  .flake8  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt  run.py
.github/: FUNDING.yml
.github/workflows/: build-test.yml  issue-autocloser.yml  main.yml  release.yml
app/: main.py  router.py
app/core/: config.py  database.py
app/models/: todos.py  users.py
app/routers/: __init__.py  users.py
app/schemas/: __init__.py  users.py
app/services/: __init__.py  db.py  security.py  users.py
docs/: CONTRIBUTING.md
migrations/: env.py
migrations/versions/: 5752954ebf8d_init.py
src/app/: main.py
src/app/core/: __init__.py  config.py  database.py
src/app/models/: __init__.py  todos.py  users.py
src/app/routers/: __init__.py  users.py
src/app/schemas/: __init__.py  todos.py  users.py
src/app/services/: __init__.py  db.py  security.py  users.py
src/migrations/: env.py
src/migrations/versions/: 105cf96bbbfc_upgrade_todos_model.py  5752954ebf8d_init.py  82cb2e6fb82f_init.py
src/tests/: conftest.py
src/tests/models/: conftest.py  test_todo_model.py  test_user_model.py
src/tests/routers/: conftest.py
src/tests/routers/users_router/: test_users_router.py
src/tests/schemas/: conftest.py  test_users_schema_full.py
src/tests/services/: test_security.py
tests/: conftest.py  test_async_health.py  test_health.py  test_users.py
