[tool.poetry]
name = "todoister"
version = "0.1.0"
description = "Простой проект в духе Todo"
authors = ["Michael Savin <jtprogru@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
SQLAlchemy = "^1.4.22"
uvicorn = "^0.14.0"
pydantic = { extras = ["dotenv"], version = "^1.8.2" }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.10.1"
pytest-deadfixtures = "^2.2.1"
pytest-env = "^0.6.2"
pytest-mock = "^3.6.1"
pytest-randomly = "^3.8.0"
pytest-repeat = "^0.9.1"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Home" = " https://github.com/jtprogru/todoister"
"Bug Tracker" = " https://github.com/jtprogru/todoister/issues"

[tool.pytest.ini_options]
filterwarnings = "error"
addopts = '''
  --strict-markers
  --tb=short
'''
testpaths = [
    "tests",
]
env = [
  "SECRET_KEY=secret",
  "PROJECT_NAME=todoister",
  "SERVER_HOST=0.0.0.0",
  "SERVER_PORT=8000",
  "LOG_LEVEL=debug",
  "DEBUG=true",
]
