[tool.poetry]
name = "todoister"
version = "0.1.0"
description = "Простой проект в духе Todo"
authors = ["Michael Savin <jtprogru@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
SQLAlchemy = "^1.4.22"
uvicorn = "^0.14.0"
pydantic = { extras = ["dotenv"], version = "^1.8.2" }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
alembic = "^1.6.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-deadfixtures = "^2.2.1"
pytest-env = "^0.6.2"
pytest-mock = "^3.6.1"
requests = "^2.26.0"
pytest-asyncio = "^0.15.1"
httpx = "^0.18.2"
requests-mock = "^1.9.3"
pytest-colordots = "^1.1"
pytest-schema = "^0.1.0"
pytest-sqlalchemy = "^0.2.1"
pytest-freezegun = "^0.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Home" = " https://github.com/jtprogru/todoister"
"Bug Tracker" = " https://github.com/jtprogru/todoister/issues"

[tool.pytest.ini_options]
filterwarnings = "error"
python_files = "test*.py"
#markers = [
#  "freeze_time: freezing time marker (pytest-freezegun does not register it)",
#]
addopts = '''
  --verbose
  --strict-markers
  --tb=short
'''
testpaths = [
    "src/tests",
]
env = [
  "SECRET_KEY=secret",
  "PROJECT_NAME=todoister",
  "SERVER_HOST=127.0.0.1",
  "SERVER_PORT=8089",
  "LOG_LEVEL=debug",
  "DEBUG=true",
  "DATABASE_URI=sqlite:///./test.sqlite"
]
