[tool.poetry]
name = "todoister"
version = "0.1.0"
description = "Простой проект в духе Todo"
authors = ["Michael Savin <jtprogru@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
SQLAlchemy = "^1.4.22"
uvicorn = "^0.15.0"
pydantic = { extras = ["dotenv"], version = "^1.8.2" }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
alembic = "^1.6.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-deadfixtures = "^2.2.1"
pytest-env = "^0.6.2"
pytest-mock = "^3.6.1"
requests = "^2.26.0"
pytest-asyncio = "^0.15.1"
httpx = "^0.23.0"
requests-mock = "^1.9.3"
pytest-colordots = "^1.1"
pytest-schema = "^0.1.0"
pytest-sqlalchemy = "^0.2.1"
pytest-freezegun = "^0.4.2"
mock = "^4.0.3"
flake8 = "^3.9.2"
black = {extras = ["d"], version = "^21.7b0"}
aiohttp = "^3.7.4"
wemake-python-styleguide = "^0.15.3"
pytest-xdist = "^2.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Home" = " https://github.com/jtprogru/todoister"
"Bug Tracker" = " https://github.com/jtprogru/todoister/issues"

[tool.pytest.ini_options]
filterwarnings = "error"
python_files = "test*.py"
norecursedirs = [
  ".git", ".tox", "venv*", "requirements*"
]

markers = [
  "secutiry: all security tests",
  "models: all models tests",
  "services: all services tests",
  "schemas: all schemas tests",
  "routers: all routers tests",
]
addopts = '''
  --verbose
  --strict-markers
  --color=yes
  --tb=short
'''
testpaths = [
    "src/tests",
]
mock_use_standalone_module = true
env = [
  "SECRET_KEY=secret",
  "PROJECT_NAME=todoister",
  "SERVER_HOST=127.0.0.1",
  "SERVER_PORT=8089",
  "LOG_LEVEL=debug",
  "DEBUG=true",
  "DATABASE_URI=sqlite:////tmp/test.sqlite"
]

[tool.black]
line-length = 128
target-version = ['py37', 'py38', 'py39']
black_skip_string_normalization = true
include = '\.pyi?$'
extend-exclude = '''
/(
  | migrations
  | venv
  | .venv
  | tests
)/
'''
